fix buttons on mobile view

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,4 +28,11 @@ input {
 main {
   max-width: 960px;
   margin: 0 auto;
+  padding: 2rem 1.5rem 3rem;
+}
+
+@media (max-width: 650px) {
+  main {
+    padding: 1rem 0.75rem 2rem;
+  }
 }
